View Issue Details

IDProjectCategoryView StatusLast Update
0024358Open CASCADEOCCT:Visualizationpublic2014-05-05 13:39
Reporterkgv Assigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Target Version6.7.1Fixed in Version6.7.1 
Summary0024358: TKV3d - connected structures are not re-computed on device lost
Description
        if (MyGraphicDriver->IsDeviceLost())
        {
          MyViewManager->ReComputeStructures();
          MyGraphicDriver->ResetDeviceLostFlag();
        }

Current implementation is unable to restore presentation for connected structures which are not displayed as independent presentations.
Steps To Reproduce
pload MODELING
pload VISUALIZATION
box b1 0 0 0 1 2 3
box b2 3 0 0 3 2 1
vinit View1
vclear
vaxo
vsetdispmode 1
vconnectsh b1c -3 0 0 1 0 0 0 0 1 b1 b2
vfit
vraytrace 1
TagsNo tags attached.
Test case numberbugs vis(004) bug24358

Relationships

related to 0024837 closedbugmaster Open CASCADE Visualization - revise design and implementation of connected Interactive Objects 

Activities

aba

2014-02-12 11:10

developer   ~0027851

The git branch CR24358 is ready to be reviewed:

1) Structure recomputing procedure in Graphic3d_StructureManager was corrected to take into account all child (connected) structures.

2) test case /bugs/vis/bug24358 was added.

Dear san,
please review.

san

2014-02-12 17:40

developer   ~0027864

Branch CR24358 reviewed without remarks, ready for testing.

mkv

2014-02-13 11:58

tester   ~0027880

Dear BugMaster,

Branch CR24358 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 126688e9f9be0c0ffbab189ddd1b0cb3b7afa5d6

Number of compiler warnings:

occt component :
Linux: 40 (40 on master)
Windows: 0 (0 on master)

products component :
Linux: 12 (12 on master)
Windows: 2 (2 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR24358-master-occt/Debian60-64/bugs/vis/bug24358.html
http://occt-tests/CR24358-master-occt/Windows-32-VC9/bugs/vis/bug24358.html
bugs vis(004) bug24358: OK

Testing on Linux:
Total MEMORY difference: 381357816 / 381831144
Total CPU difference: 48933.12999999994 / 42213.76

Testing on Windows:
Total MEMORY difference: 428443036 / 431123492
Total CPU difference: 34038.375 / 34130.65625

There are not differences in images found by testdiff.

Related Changesets

occt: master 8bb96a97

2014-02-13 09:09:42

aba


Committer: apn Details Diff
0024358: TKV3d - connected structures are not re-computed on device lost

Graphic3d_StructureManager::ReComputeStructures() method was corrected to consider all child (connected) structures.
Corrected remarks: added image dump in test case; corrected method name.
Affected Issues
0024358
mod - src/Graphic3d/Graphic3d_StructureManager.cdl Diff File
mod - src/Graphic3d/Graphic3d_StructureManager.cxx Diff File
mod - src/Visual3d/Visual3d_View.cxx Diff File
add - tests/bugs/vis/bug24358 Diff File

Issue History

Date Modified Username Field Change
2013-11-14 11:24 kgv New Issue
2013-11-14 11:24 kgv Assigned To => san
2013-11-14 11:26 kgv Summary TKOpenGl - connected structures are not re-computed on device lost => TKV3d - connected structures are not re-computed on device lost
2013-11-29 18:39 san Assigned To san => aba
2013-11-29 18:39 san Status new => assigned
2013-12-12 10:50 san Target Version 6.7.0 => 6.7.1
2014-02-12 11:10 aba Note Added: 0027851
2014-02-12 11:10 aba Assigned To aba => san
2014-02-12 11:10 aba Status assigned => resolved
2014-02-12 17:40 san Note Added: 0027864
2014-02-12 17:40 san Assigned To san => bugmaster
2014-02-12 17:40 san Status resolved => reviewed
2014-02-12 18:07 mkv Assigned To bugmaster => mkv
2014-02-13 11:58 mkv Note Added: 0027880
2014-02-13 11:58 mkv Test case number => bugs vis(004) bug24358
2014-02-13 11:58 mkv Assigned To mkv => bugmaster
2014-02-13 11:58 mkv Status reviewed => tested
2014-02-14 12:00 apn Changeset attached => occt master 8bb96a97
2014-02-14 12:00 apn Assigned To bugmaster => apn
2014-02-14 12:00 apn Status tested => verified
2014-02-14 12:00 apn Resolution open => fixed
2014-04-16 12:01 kgv Relationship added related to 0024837
2014-05-05 13:20 bugmaster Status verified => closed
2014-05-05 13:39 aiv Fixed in Version => 6.7.1